_build/html/reports/oppgaver_a.log
Traceback (most recent call last):
  File "c:\users\runst280291\anaconda3\envs\py37\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "c:\users\runst280291\anaconda3\envs\py37\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\runst280291\anaconda3\envs\py37\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\runst280291\anaconda3\envs\py37\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\runst280291\anaconda3\envs\py37\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "c:\users\runst280291\anaconda3\envs\py37\lib\site-packages\nbclient\client.py", line 554, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "c:\users\runst280291\anaconda3\envs\py37\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "c:\users\runst280291\anaconda3\envs\py37\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
print(Velkommen til min kalkulator!)
tall_1 = input("Første tall: ")
tall_2 = input("Andre tall: ")
operator = input("+ - / eller * ")

svar = 0
if operator == "+"
    svar = tall_1 + tall_2
elif operator == "-":
    svar = tall1 - tall2
elif operator = "/":
    svar = tall_1 / tall_2
elif operator == "*":
    svar = tall_1 * tall_2
else:
print(Ugyldig operator)

print(f"{tall_1} {operator} {tall2} = {svar}")
------------------

[1;36m  File [1;32m"<ipython-input-1-474359007025>"[1;36m, line [1;32m1[0m
[1;33m    print(Velkommen til min kalkulator!)[0m
[1;37m                      ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-474359007025>, line 1)

